Admin Functionalites are done Moderator Functionalities are Done Email verification API added